--- a/css/styles.css
+++ b/css/styles.css
@@ -8,14 +8,6 @@ body {
 	padding: 20px 0 15px;
 }
 
-h1 {
-	margin: 0;
-	font-family: 'Lato', sans-serif;
-	font-size: 55px;
-	font-weight: bold;
-	text-transform: uppercase;
-}
-
 h2 {
 	margin: 0;
 	padding-top: 42px;
@@ -28,6 +20,14 @@ h2 {
 
 p {
 	margin: 0;
+}
+
+.assos {
+	margin: 0;
+	font-family: 'Lato', sans-serif;
+	font-size: 55px;
+	font-weight: bold;
+	text-transform: uppercase;
 }
 
 .franshiza {
